# ivshmemmap

./: .gitignore  Cargo.toml  README.md
ivshmemmap-tests/: Cargo.toml  README.md  cross_compile.sh  cross_compile_release.sh
ivshmemmap-tests/src/: main.rs
src/: device.rs  error.rs  lib.rs
src/linux/: mod.rs
src/windows/: mod.rs  winerror.rs
